[package]
name = "browser"
version = "0.1.0"
authors = ["shantanu28sharma <shantanu28sharma@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.19.4"

[dependencies]
lalrpop-util = "0.19.4"
regex = "1"
